# Backtesting-Crypto-Trading-Strategies

./: .gitignore  README.md  backtesting.py  compile_commands.json  main.py  requirements.txt  utils.py
.cache/clangd/index/: Database.cpp.361B91C438600D68.idx  Database.h.14AE10CA13EB8D95.idx  main.cpp.109F28AD77987B3B.idx
C++/: CMakeLists.txt  Database.cpp  Database.h  main.cpp
Python/: backtesting.py  main.py  models.py  requirements.txt  utils.py
Python/common/: config.py  logger.py  utils.py
Python/core/: backtester.py  genetic_utils.py  optimizer.py
Python/exchanges/: base.py  binance.py  okx.py
Python/models/: result.py
Python/services/: data_collector.py  database.py
Python/strategies/: base.py  ichimoku.py  obv.py  psar.py  sma.py  support_resistance.py
cpp/: CMakeLists.txt
cpp/include/: Candle.h  Database.h  Utils.h
cpp/include/strategies/: PSAR.h  SMA.h  Strategy.h
cpp/src/: Database.cpp  Utils.cpp  main.cpp
cpp/src/strategies/: PSAR.cpp  SMA.cpp
data/: binance.h5
exchanges/: okx.py
services/: data_collector.py  database.py
